--- a/trunk/keyclick/f_readdump.phtml
+++ b/trunk/keyclick/f_readdump.phtml
@@ -24,6 +24,7 @@ function ReadDump
    $prev_sql_query = ""
    )
 {
+
 /**
  * Removes comment lines and splits up large sql files into individual queries
  *
@@ -211,196 +212,16 @@ function ExecSelect
    }
 
 
-if (!function_exists('is_uploaded_file')) {
-    /**
-     * Emulates the 'is_uploaded_file()' function for old php versions.
-     * Grabbed at the php manual:
-     *     http://www.php.net/manual/en/features.file-upload.php
-     *
-     * @param   string    the name of the file to check
-     *
-     * @return  boolean   wether the file has been uploaded or not
-     *
-     * @access  public
-     */
-    function is_uploaded_file($filename) {
-        if (!$tmp_file = @get_cfg_var('upload_tmp_dir')) {
-            $tmp_file = tempnam('','');
-            $deleted  = @unlink($tmp_file);
-            $tmp_file = dirname($tmp_file);
-        }
-        $tmp_file     .= '/' . basename($filename);
-
-        // User might have trailing slash in php.ini...
-        return (preg_replace('|/+|', '/', $tmp_file) == $filename);
-    } // end of the 'is_uploaded_file()' emulated function
-} // end if
-
-
-/**
- * Increases the max. allowed time to run a script
- */
-@set_time_limit($cfgExecTimeLimit);
-
-
-/**
- * Gets some core libraries
- */
-//require('./libraries/grab_globals.lib.php3');
-//require('./libraries/common.lib.php3');
-
-
-//--/**
-//-- * Defines the url to return to in case of error in a sql statement
-//-- */
-//--if (($goto == "")
-//--    || ($goto != 'db_details.php3' && $goto != 'tbl_properties.php3')) {
-//--    $goto = 'db_details.php3';
-//--}
-$err_url  = $goto
-          . '?lang=' . $lang
-          . '&amp;server=' . $server
-          . '&amp;db=' . urlencode($db)
-          . (($goto == 'tbl_properties.php3') ? '&amp;table=' . urlencode($table) : '');
-
-
-/**
- * Set up default values for some variables
- */
-$view_bookmark = 0;
-$sql_bookmark  = isset($sql_bookmark) ? $sql_bookmark : '';
-$sql_query     = isset($sql_query)    ? $sql_query    : '';
-$sql_file      = !empty($sql_file)    ? $sql_file     : 'none';
-
-
-/**
- * Bookmark Support: get a query back from bookmark if required
- */
-if (!empty($id_bookmark)) {
-    include('./libraries/bookmark.lib.php3');
-    switch($action_bookmark) {
-        case 0: // bookmarked query that have to be run
-            $sql_query = PMA_queryBookmarks($db, $cfgBookmark, $id_bookmark);
-            break;
-        case 1: // bookmarked query that have to be displayed
-            $sql_query = PMA_queryBookmarks($db, $cfgBookmark, $id_bookmark);
-            $view_bookmark = 1;
-            break;
-        case 2: // bookmarked query that have to be deleted
-            $sql_query = PMA_deleteBookmarks($db, $cfgBookmark, $id_bookmark);
-            break;
-    }
-} // end if
-
-
-/**
- * Prepares the sql query
- */
-// Gets the query from a file if required
-if ($sql_file != 'none') {
-    if (file_exists($sql_file) && is_uploaded_file($sql_file)) {
-
-        $open_basedir     = '';
-        if (PMA_PHP_INT_VERSION >= 40000 ) {
-            $open_basedir = @ini_get('open_basedir');
-        }
-        if (empty($open_basedir)) {
-            $open_basedir = @get_cfg_var('open_basedir');
-        }
-
-        // If we are on a server with open_basedir, we must move the file
-        // before opening it. The doc explains how to create the "./tmp"
-        // directory
-
-        if (!empty($open_basedir)) {
-            // check if '.' is in open_basedir
-            $pos = strpos(' ' . $open_basedir, '.');
-
-            // from the PHP annotated manual
-            if (!$pos) {
-                // if no '.' in openbasedir, do not move the file, force the
-                // error and let PHP report it
-                error_reporting(E_ALL);
-                $sql_query = fread(fopen($sql_file, 'r'), filesize($sql_file));
-            }
-            else {
-                $sql_file_new = './tmp/' . basename($sql_file);
-                if (PMA_PHP_INT_VERSION < 40003) {
-                    copy($sql_file, $sql_file_new);
-                } else {
-                    move_uploaded_file($sql_file, $sql_file_new);
-                }
-                $sql_query = fread(fopen($sql_file_new, 'r'), filesize($sql_file_new));
-                unlink($sql_file_new);
-            }
-        }
-        else {
-            // read from the normal upload dir
-            $sql_query = fread(fopen($sql_file, 'r'), filesize($sql_file));
-        }
-
-        if (get_magic_quotes_runtime() == 1) {
-            $sql_query = stripslashes($sql_query);
-        }
-    }
-}
-else if (empty($id_bookmark) && get_magic_quotes_gpc() == 1) {
-    $sql_query = stripslashes($sql_query);
-}
-
-// Kanji convert SQL textfile 2002/1/4 by Y.Kawada
-if (@function_exists('PMA_kanji_str_conv')) {
-    $sql_tmp   = trim($sql_query);
-    PMA_change_enc_order();
-    $sql_query = PMA_kanji_str_conv($sql_tmp, $knjenc, isset($xkana) ? $xkana : '');
-    PMA_change_enc_order();
-} else {
-    $sql_query = trim($sql_query);
-}
-
-// $sql_query come from the query textarea, if it's a reposted query gets its
-// 'true' value
-if (!empty($prev_sql_query)) {
-    $prev_sql_query = urldecode($prev_sql_query);
-    if ($sql_query == trim(htmlspecialchars($prev_sql_query))) {
-        $sql_query  = $prev_sql_query;
-    }
-}
-
-// Drop database is not allowed -> ensure the query can be run
-if (!$cfgAllowUserDropDatabase
-    && preg_match('/DROP[[:space:]]+(IF EXISTS[[:space:]]+)?DATABASE /i', $sql_query)) {
-    // Checks if the user is a Superuser
-    // TODO: set a global variable with this information
-    // loic1: optimized query
-    $result = @$db_link->query('USE mysql');
-    if (mysqli_error($db_link)) {
-        include('./header.inc.php3');
-        PMA_mysqlDie($strNoDropDatabases, '', '', $err_url);
-    }
-}
-define('PMA_CHK_DROP', 1);
-
-
-/**
- * Executes the query
- */
-if ($sql_query != '') {
     $pieces       = array();
     PMA_splitSqlFile($pieces, $sql_query, PMA_MYSQL_INT_VERSION);
     $pieces_count = count($pieces);
 
     // Copy of the cleaned sql statement for display purpose only (see near the
     // beginning of "db_details.php3" & "tbl_properties.php3")
-    if ($sql_file != 'none' && $pieces_count > 10) {
-         // Be nice with bandwidth...
-        $sql_query_cpy = $sql_query = '';
-    } else {
-        $sql_query_cpy = implode(";\n", $pieces) . ';';
-    }
+    $sql_query_cpy = implode(";\n", $pieces) . ';';
 
     // Only one query to run
-    if ($pieces_count == 1 && !empty($pieces[0]) && $view_bookmark == 0 && ($be_viewable_result == 'TRUE'))
+    if ($pieces_count == 1 && !empty($pieces[0]) && ($be_viewable_result == 'TRUE'))
        {
        ExecSelect
           (
@@ -421,7 +242,7 @@ if ($sql_query != '') {
        }
 
     // Runs multiple queries
-    else if (mysqli_select_db($db)) {
+    else if (mysqli_select_db($db_link,$db)) {
         for ($i = 0; $i < $pieces_count; $i++) {
             $a_sql_query = $pieces[$i];
             //
@@ -464,72 +285,5 @@ if ($sql_query != '') {
         } // end for
     } // end else if
     unset($pieces);
-} // end if
-
-
-/**
- * MySQL error
- */
-if (isset($my_die)) {
-    $js_to_run = 'functions.js';
-    include('./header.inc.php3');
-    PMA_mysqlDie('', $my_die, '', $err_url);
-}
-
-
-/**
- * Go back to the calling script
- */
-// Checks for a valid target script
-if (isset($table) && $table == '') {
-    unset($table);
-}
-if (isset($db) && $db == '') {
-    unset($db);
-}
-$is_db = $is_table = FALSE;
-if ($goto == 'tbl_properties.php3') {
-    if (!isset($table)) {
-        $goto     = 'db_details.php3';
-    } else {
-        $is_table = @$db_link->query('SHOW TABLES LIKE \'' . PMA_sqlAddslashes($table, TRUE) . '\'');
-        if (!@mysqli_numrows($is_table)) {
-            $goto = 'db_details.php3';
-            unset($table);
-        }
-    } // end if... else...
-}
-if ($goto == 'db_details.php3') {
-    if (isset($table)) {
-        unset($table);
-    }
-    if (!isset($db)) {
-        $goto     = 'main.php3';
-    } else {
-        $is_db    = @mysqli_select_db($db);
-        if (!$is_db) {
-            $goto = 'main.php3';
-            unset($db);
-        }
-    } // end if... else...
-}
-// Defines the message to be displayed
-if (!empty($id_bookmark) && $action_bookmark == 2) {
-    $message   = $strBookmarkDeleted;
-} else if (!isset($sql_query_cpy)) {
-    $message   = $strNoQuery;
-} else if ($sql_query_cpy == '') {
-    $message   = "$strSuccess&nbsp;:<br />$strTheContent ($pieces_count $strInstructions)&nbsp;";
-} else {
-    $message   = $strSuccess;
-}
-// Loads to target script
-if ($goto == 'db_details.php3' || $goto == 'tbl_properties.php3') {
-    $js_to_run = 'functions.js';
-}
-//--if ($goto != 'main.php3') {
-//--    include('./header.inc.php3');
-//--}
-//--require('./' . $goto);
 }
 ?>
