--- a/trunk/keyclick/analyze.phtml
+++ b/trunk/keyclick/analyze.phtml
@@ -252,7 +252,7 @@ $connected = (ConnectSelectDbInstanceUNPUBLISHED($db_link) == "TRUE");
                           break;
                        }
                     echo "               <br>\n"
-                       . "               <p><small><small><em><pre>$Id$</pre></em></small></small>\n"
+                       . "               <p><small><small><em><pre>\$Id$</pre></em></small></small>\n"
                        . "            </td>\n"
                        . "         </tr>\n"
                        . "      </table>\n"
